2004-11-15  Not Zed  <NotZed@Ximian.com>

	* e-trie.[ch], e-memory.[ch], e-sexp.[ch], e-msgport.[ch]: Moved
	to eds/libedataserver.

	* e-path.[ch]: removed & deleted.

2004-11-03  Not Zed  <NotZed@Ximian.com>

	* e-plugin.c (e_plugin_list_plugins): added helper api to list all
	plugins.
	(ep_construct): load authors into new list for them.
	(e_plugin_register_type): setup disabled list.
	(ep_construct): dont load the hooks if we're not enabled.
	(e_plugin_enable): make this a virutal method.
	(e_plugin_invoke): if we're disabled, noop.

2004-11-01  Not Zed  <NotZed@Ximian.com>

	** See bug #68787

	* e-account.c (xml_set_content): check the new val isn't null
	before dereferencing it.
	* e-account.c (xml_set_prop): same here.

2004-10-28  Not Zed  <NotZed@Ximian.com>

	* e-config.c (ec_rebuild): revert the last change.

2004-10-28  Not Zed  <NotZed@Ximian.com>

	* e-config.c (ec_rebuild): set the default row/col spacings of the
	table.

2004-10-20  Not Zed  <NotZed@Ximian.com>

	* e-config.c (ec_rebuild): check for empty trailing sections/pages
	after we exit the main loop.

	* e-plugin.c (e_plugin_get_type): make ~/.eplugins the default
	eplugin location, not ~/.eplug.

2004-10-18  Not Zed  <NotZed@Ximian.com>

	* e-config.h: fix some forward decls.

2004-10-19  JP Rosevear  <jpr@novell.com>

	* e-config.c, e-event.c, e-menu.c, e-plugin.c, e-plugin.h,
	e-popup.c: convert to org.gnome hook names

2004-10-07  Jeffrey Stedfast  <fejj@novell.com>

	* e-passwords.c (ep_ask_password): Use "%s" as the formatter
	argument and msg->prompt as a printf-style argument rather than
	using it as the format string. Fixes bug #67622.

2004-10-12  Not Zed  <NotZed@Ximian.com>

	* e-config.c (ech_check, ech_config_factory, emph_construct_menu):
	setup a "check" handler, page-check/validation callback.

	* e-popup.c (e_popup_new): new method to create a targetless popup
	menu.

2004-10-08  JP Rosevear  <jpr@novell.com>

	* e-plugin.c (ep_load): fix typo
